fixed button responsive issue

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -65,6 +65,9 @@
   #hero .wrapper .hero-left ul {
     list-style: none;
   }
+  #plans .plan-card a {
+    font-size:0.6rem;
+  }
   #hero .wrapper .hero-left h3 {
     text-align: center;
   }
